--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
     <script src="loader.js"></script>
     <div class="container">
-        <h1>Hey You!!</h1>
-        <h2>Will you be my Valentine?</h2>
+        <h1>Hi Gorgeous🎀</h1>
+        <h2>Will you be my Valentine?💘</h2>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Yes</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
