--- a/yes_page.html
+++ b/yes_page.html
@@ -18,12 +18,12 @@
     </div>
     <script src="loader.js"></script>
     <div class="container">
-        <h1 class="header_text">Aww you making me blush >.< </h1>
-        <h1 class="header_text">Hehe knew you would say yes! ;) </h1>
+        <h1 class="header_text">Aww you making this lucky man blush Bebe☺️</h1>
+        <h1 class="header_text">Congratulations Miss Shretah🎀 You're officially my Valentine forever and ever🥳</h1>
         <div class="gif_container">
             <img src="yes.webp" alt="Celebrating GIF" fetchpriority="high">
         </div>
-        <h1 class="header_text">I love you too my sweet heart</h1>
+        <h1 class="header_text">I love you too my adorable</h1>
     </div>
 </body>
 </html>
