--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="no-button" onclick="handleNoClick()">No</button>
         </div>
         <div class="gif_container">
-            <img src="waiting.webp" alt="Cute GIF" fetchpriority="high">
+            <img src="gif1.gif" alt="Cute GIF" fetchpriority="high">
         </div>
     </div>
     <script src="script.js"></script>
